--- a/app/assets/stylesheets/videos.css.scss
+++ b/app/assets/stylesheets/videos.css.scss
@@ -25,5 +25,6 @@ a:hover, a:focus { color: #1B29A4; }
 a:active { color: #000; }
 
 audio, video {
-    border: 1px solid rgb(15, 158, 238); 
+    border: 1px solid #BFC0C0;
 }
+
