--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -13,7 +13,7 @@
                       </video>
                     
                       <div class="floatRight">
-                        <i>Belongs to: <%= link_to @question.user.username, user_path(@question.user.id) %></i>
+                        <span class="grey">Belongs to: <%= link_to @question.user.username, user_path(@question.user.id) %></span></i>
                       </div>
                       <hr />
                     
