--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -5,10 +5,10 @@
       <% @videos.each do |v| %>
         <li>
             <strong> <%= v.id %> </strong><br />
-           User  ID: <%=v.user_id %><br />
-           Username: <%#=v.user.username %><br />
+           User  ID: <%= v.user_id %><br />
+           Username: <%= v.user.user_name %><br />
+           filepath: <%= v.filepath %><br />
 
-            <%= v.the_answer %><br />
             <%= link_to "More details!", video_path(v) %>
         </li>
       <% end %>
