changed homepage image

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@
 }
 
 .header1 {
-  background-image: url("http://www.dayindecember.com/wp-content/uploads/2012/01/Times-Square1.jpg");
+  background-image: url("https://c1.staticflickr.com/9/8151/7150039103_0da71608b4_c.jpg");
 }
 
 .navbar {
