--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -14,7 +14,14 @@
                     
                       <div class="floatRight">
                         <i>Belongs to: <%= link_to @question.user.username, user_path(@question.user.id) %></i>
+                        <%=form_tag(delete_video_path(id: v.id, question_id: @question.id), method: "delete") do %>
+                          <div class='actions'>
+                            <%= button_tag "Delete Answer", :class => 'btn btn-warning' %><br />
+                            <%= link_to "Back to the list!", questions_path %><br />
+                          </div>
                       </div>
+                      
+                      <% end %>
                       <hr />
                     
                   <% end %>
@@ -23,13 +30,13 @@
         </div>
       </div>
       
-      <%= link_to "Answer This Question", new_video_path(@question.id) %><br />
+      <%= link_to "Answer", new_video_path(@question.id) %><br />
 
 
     
-      <%= link_to "Back to the list!", questions_path %><br />
-      <%= link_to "Edit Question", edit_question_path %><br />
-      <%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %> 
+      
+      <%= link_to "Edit", edit_question_path %><br />
+     <!--  <%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %>  -->
     </div>
     <div class="col-md-1"></div>
   </div>
