--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,42 +1,32 @@
 <div class="container-fluid">
-
   <div class="row">
-  
     <div class="col-md-4">
-      <br />
+      <br /><br /><br />
       <%= link_to "Create a New Question", new_question_path,  :class => 'btn btn-warning' %><br />
-        <h1> 
-        Welcome: <%= @user.username %>
-        </h1>    
+        <h1> Welcome: <%= @user.username %></h1>    
         <i>List of Questions To Answer</i><br />
       <% @questions.each do |q| %>
         <% if  q.user_id != @user.id %>
           <strong><%=q.user.username %>'s</strong> Question: <strong><%=q.the_question %></strong> <br /> <%= link_to "View Answers", question_path(q) %> | <%= link_to "Answer This Question", new_video_path(q) %><br /><br />
         <% end %>
-         
       <% end %>
-
-
     </div>
     <div class="col-md-4">
-  <h2>User's Answers</h2>
-
-  <% @user.videos.each do |v| %>
-  
-  <%= v.question.the_question %><br />
-    <video width="90%" height="90%" controls>
-    <source src="<%= v.filepath %>" type="video/webm">
-    </video><br />
-   <% end %>
-
-
+      <h2>User's Answers</h2>
+        <% @user.videos.each do |v| %>
+          <%= v.question.the_question %><br />
+            <video width="90%" height="90%" controls>
+              <source src="<%= v.filepath %>" type="video/webm">
+            </video><br />
+        <% end %>
     </div>
     <div class="col-md-4">
          <hr />
       <h2>User's Questions</h2>
-      <p>Username: <%= @user.username %></p>
-      <p>E-Mail: <%= @user.email %><br /><br />
+      <p>Username: <%= @user.username %></p><br />
 
+      <p>E-Mail: <%= @user.email %><br /><br />
+        
       <% @user.questions.each do |q| %>
       <%= q.user.username %>: <%= q.the_question %> </br>
       <%= q.created_at %> </br>
