--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -191,6 +191,10 @@ h1, h2, h3, h4, h5, h6 {
   color: grey;
 }
 
+.red {
+  color: red;
+}
+
 .underline {
   text-decoration: underline;
 }
@@ -216,4 +220,13 @@ background-color: #1E1389;
 .textCenter {
   text-align:center;
 }
+
+.questions-index {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  line-height: 26px;
+  padding-bottom: 15px;
+}
+
+
 
