--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
 
         <li><%= link_to "Users", users_path %></li>
         <li><%= link_to "Questions", questions_path %></li>
+        
+        <li><%= link_to "Ask qURL", new_question_path %></li>
+        
       </uL>
       <ul class="nav navbar-nav navbar-right">
          <% if current_user %>
