--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,20 +8,25 @@
   <% end %>
     <div class="col-md-4">
       <div class="homepage-boxes">
-        <p class="bg-primary text-center">q: <%= q.the_question %> </p>
-      
+       
+      <div class="videoContainer">
       <% if !q.videos.nil? %>
         <% if !q.videos[0].nil? %>
           <%if !q.videos[0].filepath.nil? %>
          
             <video width="90%" height="90%" controls>
               <source src="<%= q.videos[0].filepath %>" type="video/webm">
-            </video><br />
+            </video>
+ <div class="videoOverlay">
+       <p class="homepage-white text-center">q: <%= q.the_question %> </p>
+      </div>
+            <br />
              <%= link_to 'View All Answers', question_path(q), method: :get, :class => 'btn btn-primary center-block' %>
           
           <% end %>
         <% end %>
       <% end %>
+    </div>
     </div>
     </div>
     <!-- if at end of group of 3, it closes the row out -->
