--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,6 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-
-        <li><%= link_to "Users", users_path %></li>
         <li><%= link_to "Questions", questions_path %></li>
         
         <li><%= link_to "Ask qURL", new_question_path %></li>
@@ -30,10 +28,8 @@
       </uL>
       <ul class="nav navbar-nav navbar-right">
          <% if current_user %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Logged in as <%= current_user.username %><span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-              <li><%= link_to "Log Out", logout_path  %></li>
+          <li> <%= link_to current_user.username, user_path(current_user.id) %> </li>
+            <li><%= link_to "Log Out", logout_path  %></li>
         
         <% else %>
         
@@ -44,7 +40,7 @@
           <% end %></li>
           <li><%= button_to "Sign  In", new_session_path, method: :get, :class => 'btn btn-default navbar-btn btn-sm' %></li>
           <% end %>
-      </ul>
+      
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
