--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,39 +3,43 @@
   <div class="col-md-4">
     <div class="panel panel-default">
       <div class="panel-body">
-    <h1>Join "Happy" today</h1>
-<%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
-      <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+        <h1>Join qURL today</h1>
+          <%= form_for @user do |f| %>
+            <% if @user.errors.any? %>
+              <div class="error_messages">
+              <h2>Form is invalid</h2>
+              <ul>
+                <% @user.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
 
     <div class="field">
-    <%= f.text_field :username, :class => 'form-control', :placeholder => 'username' %> <br />
+      <%= f.text_field :username, :class => 'form-control', :placeholder => 'username' %> <br />
     </div>
 
   <div class="field">
     <%= f.text_field :email, :class => 'form-control', :placeholder => 'email' %> <br />
   </div>
+
   <div class="field">
     <%= f.password_field :password, :class => 'form-control', :placeholder => 'password' %> <br />
   </div>
+
   <div class="field">
     <%= f.password_field :password_confirmation, :class => 'form-control', :placeholder => 'confirm password' %>
   </div> <br />
-  <div class="actions"><%= f.submit "Create my Account", :class => 'btn btn-warning' %></div>
-<% end %>
-    </div>
+
+  <div class="actions">
+    <%= f.submit "Create my Account", :class => 'btn btn-warning' %></div>
+    <% end %>
+  </div>
     <div class="panel-footer">
       <small><p class="text-muted">Already have an account? <%= link_to "Sign  In", new_session_path %> </p></small>
     </div>
-    </div>
+  </div>
 
   </div>
   <div class="col-md-4"></div>
