--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,9 @@
   <%= csrf_meta_tags %>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Droid+Sans|Open+Sans|Roboto+Condensed|Comfortaa' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Sans|Open+Sans|Roboto+Condensed|Comfortaa|Raleway:400,900' rel='stylesheet' type='text/css'>
 </head>
+
 <body class="bodyBG">
   <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
