Syle css updates

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -105,7 +105,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-default {
-background-color: #1E1389;
+background-color: #428bca;
 }
 
 .navbar-default .navbar-nav > li > a {
