new background image

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@
 }
 
 .header1 {
-  background-image: url("https://c1.staticflickr.com/9/8151/7150039103_0da71608b4_c.jpg");
+  background-image: url("brick_wall_background2.png");
 }
 
 .navbar {
@@ -46,6 +46,7 @@
 
 .navbar-brand {
   margin-top: 0px;
+  border: none;
 }
 
 /* White Links at Bottom */
