--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header"> 
-       <div class="navbar-brand" ><%= link_to image_tag("qurl_logo_100.png"), root_path, method: :get %></div>
+       <div class="navbar-brand"><%= link_to image_tag("qurl100.png"), root_path, method: :get %></div>
     </div>
  
 
@@ -33,9 +33,9 @@
         
         <% else %>
         
-        <li><%= button_to "Sign Up", new_user_path, method: :get, :class => 'btn btn-default navbar-btn btn-sm' %> 
-        </li>
-          <li><%= button_to "Sign  In", new_session_path, method: :get, :class => 'btn btn-default navbar-btn btn-sm' %></li>
+        <li><%= link_to "Sign Up", new_user_path, method: :get %> 
+        </li> 
+          <li><%= link_to "Sign  In", new_session_path, method: :get %></li>
           <% end %>
       
     </div><!-- /.navbar-collapse -->
