--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Droid+Sans|Open+Sans|Roboto+Condensed|Comfortaa|Raleway:400,900' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Sans|Open+Sans|Roboto+Condensed|Comfortaa|Raleway:400,900|News+Cycle:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body class="bodyBG">
@@ -15,7 +15,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header"> 
-       <div class="navbar-brand" ><%= link_to image_tag("qurl_logo_100.png"), root_path, method: :get %></div>
+       <div class="navbar-brand" ><%= link_to image_tag("qurl_logo_100.png"), root_path, method: :get, :class => 'animated bounce' %></div>
     </div>
  
 
