--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -158,9 +158,11 @@ background-color: #4da4b8;
 
 .homepage-white {
   font-family: 'Raleway', sans-serif;
-  font-size: 24px;
-  font-weight: 800;
+  font-size: 30px;
+  font-weight: 400;
   color: white;
   text-shadow: 2px 2px 2px black;
+  text-align:left;
+  width: 95%;
 }
 
