uploading new finished background artwork and deleted unnecessary image files

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@
 }
 
 .header1 {
-  background-image: url("brick_wall_background2.png");
+  background-image: url("/assets/brick_wall6.png");
 }
 
 .navbar {
