--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@
 }
 
 .header1 {
-  background-image: url("/app/assets/images/brick_wall6.png");
+  background-image: image-url("brick_wall6.png");
   // background-size: cover;
 }
 
