--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,7 @@
 }
 
 .header1 {
-  background-image: url("/assets/brick_wall6.png");
+  background-image: url("/assets/brick_wall_8.png");
 }
 
 .navbar {
