style and tests

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,8 @@
 }
 
 .header1 {
-  background-image: url("brick_wall_background2.png");
+  background-image: image-url("brick_wall_background2.png");
+  
 }
 
 .navbar {
@@ -165,4 +166,6 @@ background-color: #4da4b8;
   text-align:left;
   width: 95%;
 }
+
+
 
