--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header"> 
 
-       <div class="navbar-brand"><%= link_to image_tag("qurl100.png"), root_path, method: :get %></div>
+       <div class="navbar-brand"><%= link_to image_tag("qurl100.png"), root_path, method: :get, :class => 'animated pulse' %></div>
 
       </div>
  
