fixed script tags

--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -12,7 +12,9 @@
               </div><br />
                <%= link_to "Back to the list!", questions_path %>
             <% end %>
-        </div>
+          </div>
+          <div class="panel-heading"><h2>Edit This Question</h2></div>
+
       </div>
       
     <div class="col-md-2"></div>
