--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -35,8 +35,8 @@
   </div>
 </div>
 
-<%= javascript_include_tag "RecordRTC" %>
-<%= javascript_include_tag "mediaRecorder" %>
+<%#= javascript_include_tag "RecordRTC" %>
+<%#= javascript_include_tag "mediaRecorder" %>
 
 <script>window.onload=function(){mediaRecorder()}</script>
 
